--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -15,9 +15,29 @@
 
 html {
   font-family: laca, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: $background;
   font-size: 10px;
+}
+
+.book {
+  font-size: 2rem;
+}
+
+.box {
+  width: 50vw;
+}
+
+.copyright {
+  font-size: 0.7em;
+}
+
+.book-title {
+  font-size: 3em;
+}
+
+.description {
+  font-size: 2em;
 }
 
 .main {
